add sam-predict to the end point
